--- a/package.json
+++ b/package.json
@@ -1,27 +1,56 @@
 {
-  "name": "bchart",
-  "version": "0.1.0",
-  "private": true,
+  "name": "bcharti",
+  "version": "0.1.4",
+  "private": false,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
     "next": "11.1.2",
+    "npmrc": "^1.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.4.3"
-  }
+  },
+  "description": "BChart is a pre-modeled bar chart for your projects.",
+  "main": "dist/index.ts",
+  "module": "dist/index.js",
+  "files": ["dist"],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gustavo-zsilva/bchart.git"
+  },
+  "keywords": [
+    "chart",
+    "bar",
+    "react",
+    "components",
+    "ui"
+  ],
+  "author": "Gustavo Zonta da Silva",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gustavo-zsilva/bchart/issues"
+  },
+  "homepage": "https://github.com/gustavo-zsilva/bchart#readme"
 }
